Add matrix inner product.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,16 @@ project(cuda_programming CUDA)
 
 set(CMAKE_CUDA_STANDARD 14)
 
-add_executable(cuda_programming matrix_sum.cu cuda_start.h)
+add_executable(matrix_sum matrix_sum.cu cuda_start.h)
 
 set_target_properties(
-        cuda_programming
+        matrix_sum
+        PROPERTIES
+        CUDA_SEPARABLE_COMPILATION ON)
+
+add_executable(matrix_inner_product matrix_inner_product.cu cuda_start.h)
+
+set_target_properties(
+        matrix_inner_product
         PROPERTIES
         CUDA_SEPARABLE_COMPILATION ON)
